# itmo-realtime-computer-graphics

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ComputerGraphics.sln  ComputerGraphics.vcxproj  ComputerGraphics.vcxproj.filters  vcpkg.json
apps/: CMakeLists.txt  app.cpp  clear_screen_component.hpp  square_component.hpp  window_title_component.hpp
apps/example/: CMakeLists.txt  clear_screen_component.hpp  example.cpp  game.cpp  game.hpp  main.cpp  square_component.cpp  square_component.hpp  window_title_component.hpp
apps/katamari/: CMakeLists.txt  field.cpp  field.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  player_child.cpp  player_child.hpp  viewport_manager.cpp  viewport_manager.hpp
apps/katamari/objects/: apricot.cpp  apricot.hpp  axe.cpp  axe.hpp  boat.cpp  boat.hpp  bulb.cpp  bulb.hpp  cake.cpp  cake.hpp  chair.cpp  chair.hpp  cheese.cpp  cheese.hpp  concrete_barricade.cpp  concrete_barricade.hpp  die.cpp  die.hpp  hog.cpp  hog.hpp  strawberry.cpp  strawberry.hpp  tanto.cpp  tanto.hpp
apps/pong/: CMakeLists.txt  ball.cpp  ball.hpp  direction.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  pong.cpp  referee.hpp
apps/solar_system/: CMakeLists.txt  camera_manager.cpp  camera_manager.hpp  collision.cpp  collision.hpp  game.cpp  game.hpp  main.cpp  orbit_camera_manager.cpp  orbit_camera_manager.hpp  viewport_manager.cpp  viewport_manager.hpp
apps/solar_system/celestials/: deimos.cpp  deimos.hpp  earth.cpp  earth.hpp  jupyter.cpp  jupyter.hpp  mars.cpp  mars.hpp  mercury.cpp  mercury.hpp  moon.cpp  moon.hpp  neptune.cpp  neptune.hpp  phobos.cpp  phobos.hpp  saturn.cpp  saturn.hpp  sun.cpp  sun.hpp  uranus.cpp  uranus.hpp  venus.cpp  venus.hpp
include/: Delegates.h  Namespace.h  Window.h
include/borov_engine/: Delegates.hpp  Namespace.hpp  Window.hpp  box_component.hpp  camera.hpp  camera_manager.hpp  collision.hpp  collision.inl  collision_primitive.hpp  collision_primitive.inl  component.hpp  component.inl  concepts.hpp  debug_draw.hpp  game.fwd  game.hpp  game.inl  geometric_primitive_component.hpp  input.hpp  input_device.hpp  input_key.hpp  light.hpp  material.hpp  math.hpp  mesh_component.hpp  mesh_component.inl  orbit_camera_manager.hpp  projection.hpp  scene_component.hpp  scene_component.inl  spectator_camera_manager.hpp  texture_draw.hpp  timer.hpp  transform.hpp  triangle_component.hpp  viewport.hpp  viewport_manager.hpp  window.hpp
include/borov_engine/alloc/: callbacks.hpp  inline_allocator.hpp  inline_allocator.inl
include/borov_engine/delegate/: delegate.hpp  delegate_handle.hpp  delegate_handle.inl  delegate_kind.hpp  delegate_kind.inl  lambda_delegate.hpp  lambda_delegate.inl  member_function.hpp  multicast_delegate.hpp  multicast_delegate.inl  raw_delegate.hpp  raw_delegate.inl  shared_ptr_delegate.hpp  shared_ptr_delegate.inl  static_delegate.hpp  static_delegate.inl
include/borov_engine/detail/: check_result.hpp  check_result.inl  d3d_ptr.hpp  erased_unique_ptr.hpp  err_handling_api.hpp  shader.hpp  string_api_set.hpp  texture.hpp
resources/meshes/: hog.fbx
resources/meshes/axe/: axe.fbx
resources/meshes/boat/: boat.fbx
resources/meshes/bulb/: bulb.fbx
resources/meshes/cake/: cake.fbx
resources/meshes/concrete_barricade/: concrete_barricade.fbx
resources/meshes/katamari/: katamari.fbx
resources/meshes/tanto/: tanto.fbx
resources/shaders/: debug_draw_primitive.hlsl  game_cascade_shadow_map.hlsl  katamari_player.hlsl  light.hlsl  material.hlsl  shader.hlsl  texture_draw.hlsl  transform.hlsl  triangle_component.hlsl  triangle_component_shadow_map.hlsl  vertex.hlsl
src/: CMakeLists.txt  Delegates.cpp  Window.cpp  box_component.cpp  camera.cpp  camera_manager.cpp  collision.cpp  collision_primitive.cpp  component.cpp  debug_draw.cpp  game.cpp  geometric_primitive_component.cpp  input.cpp  input_device.cpp  light.cpp  math.cpp  orbit_camera_manager.cpp  projection.cpp  scene_component.cpp  spectator_camera_manager.cpp  texture_draw.cpp  timer.cpp  transform.cpp  triangle_component.cpp  viewport.cpp  viewport_manager.cpp  window.cpp
src/alloc/: callbacks.cpp
src/delegate/: delegate.cpp  delegate_handle.cpp  delegate_kind.cpp
src/detail/: check_result.cpp  err_handling_api.cpp  shader.cpp  string_api_set.cpp  texture.cpp
